--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -242,4 +242,13 @@
     background-color: #1d2e5b;
     color: #fff;
   }
+
+  /* Для выпадающего списка */
+  .none {
+    display: none;
+  }
+
+  .launch {
+    display: block;
+  }
 }
