--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -10,10 +10,6 @@ body {
   overflow-x: hidden;
 }
 
-/************  Общие стили ************/
-
-/************  /Общие стили ************/
-
 /***********    header     ***********/
 
 .header {
@@ -225,31 +221,31 @@ body {
         @include flexible;
         &-icon {
           background: url("../img/dest/icons.svg#plane") no-repeat;
-          width: 19px;
-          height: 20px;
+          width: 17px;
+          height: 17px;
         }
       }
       &__bus {
         &-icon {
           background: url("../img/dest/icons.svg#bus") no-repeat;
           width: 17px;
-          height: 20px;
+          height: 17px;
         }
       }
       &__bike {
         @include flexible;
         &-icon {
           background: url("../img/dest/icons.svg#bike") no-repeat;
-          width: 24px;
           opacity: 0.15;
-          height: 20px;
+          width: 17px;
+          height: 17px;
         }
       }
       &__run {
         &-icon {
           background: url("../img/dest/icons.svg#run") no-repeat;
-          width: 20px;
-          height: 20px;
+          width: 17px;
+          height: 17px;
         }
       }
     }
@@ -603,6 +599,7 @@ body {
       width: 230px;
       background: transparent;
     }
+
     &-collection {
       position: relative;
       &-country {
@@ -770,6 +767,69 @@ body {
             mask-repeat: no-repeat;
           }
         }
+
+        &__list {
+          position: relative;
+          z-index: 20;
+
+          &-title {
+            width: 220px;
+            height: 42px;
+            border-radius: 4px 4px 0 0;
+            background-color: #1d2e5b;
+            padding: 11px 0 11px 10px;
+            &::after {
+              mask-image: url("../img/dest/icons.svg#small-cross");
+              mask-repeat: no-repeat;
+              width: 12px;
+              height: 12px;
+              position: absolute;
+              content: "";
+              background-color: #ffffff;
+              right: 17px;
+              top: 15px;
+            }
+          }
+          &-title h5 {
+            color: #ffffff;
+          }
+          &-abc {
+            position: absolute;
+            background-color: #ffffff;
+            td {
+              border: 1px solid #ccc;
+              padding: 10px;
+              width: 45px;
+              height: 42px;
+              text-align: center;
+              color: #1d2e5b;
+              font-family: "Blogger Sans";
+              font-size: 14px;
+              font-weight: 500;
+              line-height: 18px;
+              text-transform: uppercase;
+              /* Text style for "А" */
+              letter-spacing: 1.4px;
+            }
+            tr:nth-child(1) > td:nth-child(1) {
+              background-color: #edeff6;
+            }
+          }
+          &-country {
+            position: absolute;
+            height: 228px;
+            width: 220px;
+            color: #444444;
+            box-shadow: 0 20px 50px rgba(29, 46, 91, 0.1);
+            border-radius: 0 0 10px 10px;
+            border: 1px solid #cbced9;
+            background-color: #ffffff;
+            top: 290px;
+            padding-top: 18px;
+            padding-left: 20px;
+          }
+        }
+
         &-add {
           margin-top: 22px;
           position: relative;
